# freqtrade-delta-exchange

./: .gitignore  LICENSE  README.md  freqtrade_delta_exchange.pth  pyproject.toml
examples/: delta-india-demo-smoke.config.json  delta-india-demo.config.json  delta-india-live.config.json
src/freqtrade_delta_exchange/: __init__.py  delta.py  delta_ws.py
